# TradingBot

./: .coverage  .gitignore  ARCHITECTURE - V2.md  ARCHITECTURE - V3.md  ARCHITECTURE.md  Algorithmic Trading Development Env.md  README.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: secrets.toml.example
agents/: requirements-analyst-agent.md  solution-architect-agent.md
app/: main.py
app/pages/: backtests.py  charts.py  dashboard.py  settings.py  trade_journal.py
config/: instruments.yaml
config/environments/: local.yaml
config/strategies/: bollinger_breakout.yaml  bollinger_reversion.yaml  donchian.yaml  macd_cross.yaml  rsi_reversion.yaml  sma_cross.yaml
data/: spy_daily.parquet
data/curated/: ^dji_1d_yfinance.parquet  ^ftse_1d_yfinance.parquet  ^gdaxi_1d_yfinance.parquet  ^gspc_1d_yfinance.parquet  ^n225_1d_yfinance.parquet  ^ndx_1d_yfinance.parquet  cl=f_1d_yfinance.parquet  gc=f_1d_yfinance.parquet  hg=f_1d_yfinance.parquet  ng=f_1d_yfinance.parquet  si=f_1d_yfinance.parquet  spy_1d_yfinance.parquet
data/signals/: portfolio_snapshot.parquet  positions_snapshot.json
docs/: .$architecture-v2.drawio.bkp  HOW-TO-USE.md  architecture-v2.drawio  architecture-v3.drawio  architecture.drawio  build-plan.md  glossary.md  requirements-phase1.md  requirements.md
notebooks/: 01_data_check.ipynb  02_data_exploration.ipynb
scripts/: execute_trades.py  ingest_market_data.py  run_signals.py  sanity_check.py
src/trading_lab/: __init__.py  (+4 more)
src/trading_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_audit.py  test_charts_logic.py  test_config_loader.py  test_context.py  test_dashboard_logic.py  test_engine.py  test_indicators.py  test_llm.py  test_loader.py  test_metrics.py  test_strategy.py  test_transforms.py  test_validation.py
(+183 files in other folders)
